src-ken&y/objects/ECO__c.object
<CustomObject>
    <customHelpPage>HelpECO</customHelpPage>
    <description>Engineering Change Orders</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval status of ECO</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Activated__c</fullName>
        <description>Date ECO was activated</description>
        <label>Date Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ECO_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>ECO Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>ECO Notes</description>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ECO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ECO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>